test/cases/compile_errors/add_assign_on_undefined_value.zig
comptime {
    var a: i64 = undefined;
    a += a;
}

// error
//
// :3:5: error: use of undefined value here causes illegal behavior
